# FrameScript

./: .gitignore  .prettierignore  README.ja.md  README.md  index.html  package-lock.json  package.json  render.html  tsconfig.electron.json  vite.render.config.ts  vite.studio.config.ts
backend/: Cargo.toml
backend/src/: decoder.rs  ffmpeg.rs  future.rs  main.rs  util.rs
backend/src/ffmpeg/: command.rs  hw_decoder.rs  sw_decoder.rs
docs/: RENDER_KNOWN_ISSUE.md  docusaurus.config.js  sidebars.js
docs/docs/: RENDER_KNOWN_ISSUE.md  basic.md  components.md  index.md  project-structure.md  rendering.md  studio-usage.md
docs/docs/lib/: 3d.md  (+5 more)
electron/: main.ts  preload.cts  render-settings-preload.ts  types.d.ts
project/: mog.ts  project.tsx  styles.tsx  theme.ts  tsconfig.json
project/components/: panels.tsx
project/scenes/: features.tsx  intro.tsx  outro.tsx  timeline.tsx
render/: Cargo.toml
render/src/: ffmpeg.rs  main.rs
scripts/: build-binaries.mjs  start-bin.mjs
src/: StudioApp.tsx  main.tsx  vite-env.d.ts
src/gpu/: video-render.tsx  video-wgpu.tsx  video.tsx  webgpu.ts
src/lib/: animation.ts  audio-plan.ts  audio-waveform.ts  audio.ts  clip.tsx  debug-log.ts  frame.tsx  image.tsx  perf-debug.ts  project.tsx  studio-state.tsx  timeline.tsx  trim.ts
src/render/: main.tsx
src/types/: prismjs.d.ts
src/ui/: audio-waveform.tsx  clip-visibility.tsx  code-editor.tsx  editor-context.tsx  error.tsx  file-explorer.tsx  left-panel-tabs.tsx  render-progress.tsx  render-settings.tsx  timeline.tsx  transport.tsx
src/util/: promise.ts  state.ts
(+46 files in other folders)
