# !tyml @cargo/Cargo
[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = [ "ws", "json" ] }
tokio = { version = "1", features = [ "full" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "fmt" ] }
futures = "0.3.31"
futures-util = "0.3.31"
